--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+html { 
+    background: linear-gradient(to bottom right, #ff71ce, yellow) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 body {
-    background-image: linear-gradient(to bottom right, #ff71ce, yellow);
     font-family:'Courier New', Courier, monospace;
 }
 
@@ -48,13 +55,29 @@ h2 {
     max-height: 100%;
 }
 
+.flex-container {
+    display: flex;
+    height: 400px;
+    align-content: left;
+  }
+
 #kate {
-    width: 20%;
-    height: auto;
+    height: 300px;
+    width: auto;
 }
 
 #cannoli {
-    width: 30%;
-    height: auto;
+    height: 300px;
+    width: auto;
+}
+
+#hops {
+    height: 300px;
+    width: auto;
+}
+
+#magnolia {
+    height: 300px;
+    width: auto;
 }
 
